--- a/src/view/DialogGestionCliente.form
+++ b/src/view/DialogGestionCliente.form
@@ -7,6 +7,7 @@
   </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="2"/>
+    <Property name="title" type="java.lang.String" value="Gesti&#xf3;n de Usuarios"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -53,10 +54,10 @@
                           </Group>
                           <Group type="102" alignment="1" attributes="0">
                               <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="BtnAceptar" alignment="1" pref="97" max="32767" attributes="1"/>
+                                  <Component id="BtnEliminar" alignment="1" pref="97" max="32767" attributes="1"/>
                                   <Component id="BtnNuevoRegistro" alignment="0" pref="97" max="32767" attributes="1"/>
                                   <Component id="BtnModificar" alignment="0" pref="97" max="32767" attributes="1"/>
-                                  <Component id="BtnEliminar" alignment="0" pref="97" max="32767" attributes="1"/>
+                                  <Component id="BtnAceptar" alignment="0" pref="97" max="32767" attributes="1"/>
                               </Group>
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="jScrollPane1" min="-2" pref="538" max="-2" attributes="1"/>
@@ -94,12 +95,12 @@
                       <EmptySpace max="-2" attributes="0"/>
                   </Group>
               </Group>
-              <Group type="103" groupAlignment="1" max="-2" attributes="0">
-                  <Group type="102" attributes="1">
+              <Group type="103" groupAlignment="1" attributes="0">
+                  <Group type="102" alignment="0" attributes="1">
                       <Component id="BtnNuevoRegistro" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="BtnModificar" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace max="32767" attributes="0"/>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="BtnEliminar" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="BtnAceptar" min="-2" max="-2" attributes="0"/>
