--- a/src/view/DialogCliente.form
+++ b/src/view/DialogCliente.form
@@ -34,6 +34,7 @@
                       <Component id="lblIdHabitacion" min="-2" pref="20" max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="1" attributes="0">
+                      <EmptySpace min="-2" pref="764" max="-2" attributes="0"/>
                       <Component id="BtnGuardar" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Component id="BtnCancelar" min="-2" max="-2" attributes="0"/>
@@ -57,8 +58,8 @@
               <Component id="jTabbedPane1" min="-2" pref="459" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="BtnCancelar" pref="56" max="32767" attributes="1"/>
-                  <Component id="BtnGuardar" min="-2" pref="49" max="-2" attributes="1"/>
+                  <Component id="BtnGuardar" pref="56" max="32767" attributes="1"/>
+                  <Component id="BtnCancelar" alignment="0" pref="56" max="32767" attributes="1"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
