--- a/src/view/DialogMantenimientoMedida.form
+++ b/src/view/DialogMantenimientoMedida.form
@@ -68,17 +68,19 @@
           <Group type="102" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="103" groupAlignment="1" attributes="0">
-                      <Group type="102" alignment="1" attributes="0">
-                          <EmptySpace min="11" pref="11" max="11" attributes="0"/>
-                          <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace min="6" pref="6" max="6" attributes="0"/>
-                          <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
-                      </Group>
-                      <Group type="102" attributes="0">
-                          <Component id="jLabel4" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
-                          <Component id="TxtNumeroFicha" min="-2" max="-2" attributes="0"/>
+                  <Group type="102" attributes="0">
+                      <EmptySpace min="-2" pref="11" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="1" attributes="0">
+                          <Group type="102" alignment="1" attributes="0">
+                              <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace min="6" pref="6" max="6" attributes="0"/>
+                              <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
+                          </Group>
+                          <Group type="102" attributes="0">
+                              <Component id="jLabel4" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
+                              <Component id="TxtNumeroFicha" min="-2" max="-2" attributes="0"/>
+                          </Group>
                       </Group>
                   </Group>
                   <Component id="jLabel1" min="-2" pref="75" max="-2" attributes="0"/>
@@ -243,57 +245,50 @@
                                   <Component id="jLabel9" min="-2" max="-2" attributes="0"/>
                               </Group>
                               <Group type="102" attributes="0">
-                                  <EmptySpace min="14" pref="14" max="14" attributes="0"/>
-                                  <Component id="jLabel15" min="-2" pref="140" max="-2" attributes="0"/>
-                                  <EmptySpace min="10" pref="10" max="10" attributes="0"/>
-                                  <Component id="jLabel16" min="-2" pref="140" max="-2" attributes="0"/>
-                                  <EmptySpace min="10" pref="10" max="10" attributes="0"/>
-                                  <Component id="jLabel17" min="-2" pref="140" max="-2" attributes="0"/>
-                                  <EmptySpace min="10" pref="10" max="10" attributes="0"/>
-                                  <Component id="jLabel18" min="-2" pref="140" max="-2" attributes="0"/>
-                              </Group>
-                              <Group type="102" attributes="0">
                                   <EmptySpace min="14" pref="14" max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" attributes="0">
                                       <Group type="102" alignment="0" attributes="0">
-                                          <Group type="103" groupAlignment="0" attributes="0">
-                                              <Group type="102" alignment="0" attributes="0">
-                                                  <Component id="TxtDepartamento" min="-2" pref="75" max="-2" attributes="0"/>
-                                                  <EmptySpace min="15" pref="15" max="15" attributes="0"/>
-                                                  <Component id="TxtProvincia" min="-2" pref="75" max="-2" attributes="0"/>
-                                                  <EmptySpace min="15" pref="15" max="15" attributes="0"/>
-                                                  <Component id="TxtDistrito" min="-2" pref="75" max="-2" attributes="0"/>
-                                                  <EmptySpace min="15" pref="15" max="15" attributes="0"/>
-                                                  <Component id="TxtSeccion" min="-2" pref="75" max="-2" attributes="0"/>
-                                                  <EmptySpace min="15" pref="15" max="15" attributes="0"/>
-                                                  <Component id="TxtManzana" min="-2" pref="75" max="-2" attributes="0"/>
-                                                  <EmptySpace min="15" pref="15" max="15" attributes="0"/>
-                                                  <Component id="TxtLote" min="-2" pref="75" max="-2" attributes="0"/>
-                                                  <EmptySpace min="15" pref="15" max="15" attributes="0"/>
-                                                  <Component id="TxtConexion" min="-2" pref="75" max="-2" attributes="0"/>
-                                                  <EmptySpace min="15" pref="15" max="15" attributes="0"/>
-                                                  <Component id="TxtCodigoInscripcion" min="-2" pref="180" max="-2" attributes="0"/>
-                                              </Group>
-                                              <Group type="102" alignment="0" attributes="0">
-                                                  <Component id="jLabel6" min="-2" pref="75" max="-2" attributes="0"/>
-                                                  <EmptySpace min="15" pref="15" max="15" attributes="0"/>
-                                                  <Component id="jLabel7" min="-2" pref="75" max="-2" attributes="0"/>
-                                                  <EmptySpace min="15" pref="15" max="15" attributes="0"/>
-                                                  <Component id="jLabel8" min="-2" pref="75" max="-2" attributes="0"/>
-                                                  <EmptySpace min="15" pref="15" max="15" attributes="0"/>
-                                                  <Component id="jLabel10" min="-2" pref="75" max="-2" attributes="0"/>
-                                                  <EmptySpace min="15" pref="15" max="15" attributes="0"/>
-                                                  <Component id="jLabel11" min="-2" pref="75" max="-2" attributes="0"/>
-                                                  <EmptySpace min="15" pref="15" max="15" attributes="0"/>
-                                                  <Component id="jLabel12" min="-2" pref="75" max="-2" attributes="0"/>
-                                                  <EmptySpace min="15" pref="15" max="15" attributes="0"/>
-                                                  <Component id="jLabel13" min="-2" pref="75" max="-2" attributes="0"/>
-                                                  <EmptySpace min="15" pref="15" max="15" attributes="0"/>
-                                                  <Component id="jLabel14" min="-2" pref="180" max="-2" attributes="0"/>
-                                              </Group>
-                                          </Group>
-                                          <EmptySpace min="10" pref="10" max="-2" attributes="0"/>
-                                          <Component id="BtnBuscarUsuario" min="-2" max="-2" attributes="0"/>
+                                          <Component id="TxtDepartamento" min="-2" pref="75" max="-2" attributes="0"/>
+                                          <EmptySpace min="15" pref="15" max="15" attributes="0"/>
+                                          <Component id="TxtProvincia" min="-2" pref="75" max="-2" attributes="0"/>
+                                          <EmptySpace min="15" pref="15" max="15" attributes="0"/>
+                                          <Component id="TxtDistrito" min="-2" pref="75" max="-2" attributes="0"/>
+                                          <EmptySpace min="15" pref="15" max="15" attributes="0"/>
+                                          <Component id="TxtSeccion" min="-2" pref="75" max="-2" attributes="0"/>
+                                          <EmptySpace min="15" pref="15" max="15" attributes="0"/>
+                                          <Component id="TxtManzana" min="-2" pref="75" max="-2" attributes="0"/>
+                                          <EmptySpace min="15" pref="15" max="15" attributes="0"/>
+                                          <Component id="TxtLote" min="-2" pref="75" max="-2" attributes="0"/>
+                                          <EmptySpace min="15" pref="15" max="15" attributes="0"/>
+                                          <Component id="TxtConexion" min="-2" pref="75" max="-2" attributes="0"/>
+                                          <EmptySpace min="15" pref="15" max="15" attributes="0"/>
+                                          <Component id="TxtCodigoInscripcion" min="-2" pref="180" max="-2" attributes="0"/>
+                                      </Group>
+                                      <Group type="102" alignment="0" attributes="0">
+                                          <Component id="jLabel6" min="-2" pref="75" max="-2" attributes="0"/>
+                                          <EmptySpace min="15" pref="15" max="15" attributes="0"/>
+                                          <Component id="jLabel7" min="-2" pref="75" max="-2" attributes="0"/>
+                                          <EmptySpace min="15" pref="15" max="15" attributes="0"/>
+                                          <Component id="jLabel8" min="-2" pref="75" max="-2" attributes="0"/>
+                                          <EmptySpace min="15" pref="15" max="15" attributes="0"/>
+                                          <Component id="jLabel10" min="-2" pref="75" max="-2" attributes="0"/>
+                                          <EmptySpace min="15" pref="15" max="15" attributes="0"/>
+                                          <Component id="jLabel11" min="-2" pref="75" max="-2" attributes="0"/>
+                                          <EmptySpace min="15" pref="15" max="15" attributes="0"/>
+                                          <Component id="jLabel12" min="-2" pref="75" max="-2" attributes="0"/>
+                                          <EmptySpace min="15" pref="15" max="15" attributes="0"/>
+                                          <Component id="jLabel13" min="-2" pref="75" max="-2" attributes="0"/>
+                                          <EmptySpace min="15" pref="15" max="15" attributes="0"/>
+                                          <Component id="jLabel14" min="-2" pref="180" max="-2" attributes="0"/>
+                                      </Group>
+                                      <Group type="102" alignment="0" attributes="0">
+                                          <Component id="jLabel15" min="-2" pref="140" max="-2" attributes="0"/>
+                                          <EmptySpace min="10" pref="10" max="10" attributes="0"/>
+                                          <Component id="jLabel16" min="-2" pref="140" max="-2" attributes="0"/>
+                                          <EmptySpace min="10" pref="10" max="10" attributes="0"/>
+                                          <Component id="jLabel17" min="-2" pref="140" max="-2" attributes="0"/>
+                                          <EmptySpace min="10" pref="10" max="10" attributes="0"/>
+                                          <Component id="jLabel18" min="-2" pref="140" max="-2" attributes="0"/>
                                       </Group>
                                       <Group type="102" alignment="0" attributes="1">
                                           <Component id="TxtRutaLectura" min="-2" pref="140" max="-2" attributes="0"/>
@@ -305,6 +300,8 @@
                                           <Component id="TxtCategoria" min="-2" pref="140" max="-2" attributes="0"/>
                                       </Group>
                                   </Group>
+                                  <EmptySpace min="10" pref="10" max="-2" attributes="0"/>
+                                  <Component id="BtnBuscarUsuario" min="-2" max="-2" attributes="0"/>
                               </Group>
                           </Group>
                           <EmptySpace max="32767" attributes="0"/>
@@ -341,7 +338,7 @@
                                   </Group>
                               </Group>
                           </Group>
-                          <EmptySpace min="20" pref="20" max="20" attributes="0"/>
+                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Component id="TxtRutaLectura" min="-2" max="-2" attributes="0"/>
                               <Component id="TxtRutaReparto" min="-2" max="-2" attributes="0"/>
@@ -354,6 +351,7 @@
                               <Component id="jLabel17" min="-2" pref="20" max="-2" attributes="0"/>
                               <Component id="jLabel18" min="-2" pref="20" max="-2" attributes="0"/>
                           </Group>
+                          <EmptySpace min="-2" pref="11" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                 </DimensionLayout>
@@ -853,7 +851,7 @@
                               <Component id="jLabel32" min="-2" pref="20" max="-2" attributes="0"/>
                               <Component id="CbxTipoPredio" min="-2" max="-2" attributes="0"/>
                           </Group>
-                          <EmptySpace pref="39" max="32767" attributes="0"/>
+                          <EmptySpace pref="37" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                 </DimensionLayout>
@@ -4307,14 +4305,13 @@
                                                   <Group type="103" groupAlignment="0" attributes="0">
                                                       <Component id="jPanelImageCaja" alignment="0" max="32767" attributes="1"/>
                                                       <Group type="102" alignment="0" attributes="0">
-                                                          <Component id="jRadioButton1" min="-2" max="-2" attributes="0"/>
+                                                          <Component id="RbtAgua" min="-2" max="-2" attributes="0"/>
                                                           <EmptySpace max="-2" attributes="0"/>
-                                                          <Component id="jRadioButton2" min="-2" max="-2" attributes="0"/>
+                                                          <Component id="RbtDesague" min="-2" max="-2" attributes="0"/>
                                                       </Group>
                                                   </Group>
                                               </Group>
                                           </Group>
-                                          <EmptySpace max="-2" attributes="0"/>
                                       </Group>
                                   </Group>
                                   <EmptySpace pref="27" max="-2" attributes="0"/>
@@ -4364,8 +4361,8 @@
                               <Group type="102" alignment="0" attributes="0">
                                   <EmptySpace min="-2" pref="277" max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" attributes="0">
-                                      <Component id="TxtUbiConexAgua" alignment="0" min="-2" pref="120" max="-2" attributes="0"/>
-                                      <Component id="jLabel110" alignment="0" min="-2" pref="120" max="-2" attributes="0"/>
+                                      <Component id="jLabel110" min="-2" pref="120" max="-2" attributes="0"/>
+                                      <Component id="TxtUbiConexAgua" min="-2" pref="120" max="-2" attributes="0"/>
                                   </Group>
                                   <EmptySpace type="separate" max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" attributes="0">
@@ -4419,9 +4416,9 @@
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Group type="102" attributes="0">
                                   <Group type="103" groupAlignment="3" attributes="0">
-                                      <Component id="TxtUbiConexAgua" alignment="3" min="-2" max="-2" attributes="0"/>
-                                      <Component id="jRadioButton1" alignment="3" min="-2" max="-2" attributes="0"/>
-                                      <Component id="jRadioButton2" alignment="3" min="-2" max="-2" attributes="0"/>
+                                      <Component id="TxtUbiConexAgua" alignment="3" min="-2" pref="23" max="-2" attributes="0"/>
+                                      <Component id="RbtAgua" alignment="3" min="-2" max="-2" attributes="0"/>
+                                      <Component id="RbtDesague" alignment="3" min="-2" max="-2" attributes="0"/>
                                   </Group>
                                   <Component id="jLabel110" min="-2" pref="20" max="-2" attributes="0"/>
                               </Group>
@@ -5296,7 +5293,7 @@
                     </DimensionLayout>
                   </Layout>
                 </Container>
-                <Component class="javax.swing.JRadioButton" name="jRadioButton1">
+                <Component class="javax.swing.JRadioButton" name="RbtAgua">
                   <Properties>
                     <Property name="buttonGroup" type="javax.swing.ButtonGroup" editor="org.netbeans.modules.form.RADComponent$ButtonGroupPropertyEditor">
                       <ComponentRef name="buttonGroup3"/>
@@ -5308,7 +5305,7 @@
                     <Property name="text" type="java.lang.String" value="Agua"/>
                   </Properties>
                 </Component>
-                <Component class="javax.swing.JRadioButton" name="jRadioButton2">
+                <Component class="javax.swing.JRadioButton" name="RbtDesague">
                   <Properties>
                     <Property name="buttonGroup" type="javax.swing.ButtonGroup" editor="org.netbeans.modules.form.RADComponent$ButtonGroupPropertyEditor">
                       <ComponentRef name="buttonGroup3"/>
